working stretchable image atop fixed image

--- a/lingualearn/style.css
+++ b/lingualearn/style.css
@@ -105,7 +105,7 @@ body {
 }
 #word-image-fixed {
     max-width: 100%;
-    max-height: 50%;
+    max-height: 100%;
 }
 
 
